@@ -1,4 +1,5 @@
 0.7.0 - currently working on
+- [#3701] Feature: Add Model::markAsVisible and ::markAsHidden
 - [#3679] Change: Update all PEAR and emogrifier classes to the latest versions
 - [#3650] Fix: Objects overwrite/delete each other's configuration arrays
 - [#3677] Fix: Return-path in e-mails has additional <> around it when forceReturnPath is used
